package org.lakehouse.cli.api.dto.configs;


import java.io.Serializable;
import java.util.Objects;

public class ProjectDTO implements Serializable {
    private static final long serialVersionUID = -3879303744430009909L;
	private String name;
    private String description;

    public ProjectDTO() {

    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null || getClass() != o.getClass()) return false;
        ProjectDTO that = (ProjectDTO) o;
        return Objects.equals(name, that.name) && Objects.equals(description, that.description);
    }

    @Override
    public int hashCode() {
        return Objects.hash(name, description);
    }
}
